--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kailash WIKI</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
  
 <body>
@@ -16,12 +17,12 @@
         </tr>
     </table>
 
-    <hr noshade="3">
+    <hr>
 
-    <h2>Personal Information</h2>
-    <p>Age 24 and <strong>working to the fullest in life</strong></p>
+    <h3>Personal Information</h3>
+    <p>Age 24  <strong>Working as a IT engineer</strong></p>
 
-    <hr noshade="3">
+    <hr>
 
     <h3>Work Experience</h3>
     <table cellspacing="10">
@@ -41,7 +42,7 @@
        </tbody>
     </table>
 
-    <hr noshade="3">
+    <hr>
 
     <h3>Skills</h3>
 <table cellspacing="10">
@@ -74,22 +75,11 @@
     </tr>
 </table>
    
-<hr noshade="3">
+<hr>
 
-    <h3>Hobbies</h3>
-    <ul>
-        <li>music</li>
-        <li>games</li>
-        <li>singing</li>
-    </ul>
-    <ol type="i">
-        <li>Riding Bike</li>
-        <li>Reading Spiritual Books</li>
-    </ol>
-
-    <hr noshade="3">
-
-    <h4><strong><a href="practice.html">More Information</a></strong></h4>
-
+    <h3>
+        <a href="hobbies.html">Hobbies</a><br>
+        <a href="practice.html">Provide Your info for queries</a>
+    </h3>
 </body>
 </html>
