--- a/practice.html
+++ b/practice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kailash Info</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hi There !!!</h1>
