--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Here comes the Hobbies</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1> yahh this is my Hobbies!!</h1>
